# chaotic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
crates/chaotic/: Cargo.toml
crates/chaotic/src/: chaotic_system.rs  dimensions.rs  lib.rs  main.rs  sample.rs  utils.rs
crates/chaotic/src/systems/: double_pendulum.rs  mandelbrot.rs  mod.rs  three_body.rs
crates/double-pendulum/: Cargo.toml
crates/double-pendulum/src/: double_pendulum.rs  lib.rs  main.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: camera.rs  gui.rs  layers.rs  lib.rs  main.rs  visualize_area.rs
crates/viewer/src/egui_elements/: mod.rs  number_input.rs
