[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Denis Lavrentev"]
license = "MIT AND Apache-2.0"
edition = "2021"
repository = "https://github.com/defernus/chaotic"
keywords = ["simulation", "art", "chaotic-system", "three-body", "nannou"]

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_egui = "0.36"

# project packages
chaotic = { version = "0.1.0", path = "./crates/chaotic" }
viewer = { version = "0.1.0", path = "./crates/viewer" }

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
overflow-checks = true
opt-level = 3
panic = "abort"
rpath = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
